--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 /******************************************Configuração do Body****************************************************************/
-body{
+*{
+  font-family: 'Mansalva', cursive;
+  color: white;
+}
+  body{
 	margin: 0;
 	padding: 0;	
 }
@@ -25,11 +29,6 @@ header{
 .icon_svg{
   width: 60px;
 }
-.pulse {  
-  animation-duration: 3s;
-  animation-delay: 5s;
-  animation-iteration-count: infinite;
-}
 /***************************************************fim************************************************************************/
 .logo,
 .menu{  
@@ -53,7 +52,7 @@ nav a{
 /*Imagem do Logo*/
 .lobo {
   width: 60px;  
-  border-radius: 100%;  
+  border-radius: 100%;
 }
 /***************************************************fim************************************************************************/
 /***************************************************Banner********************************************************************/
@@ -61,25 +60,25 @@ nav a{
 /************************************************** Panels********************************************************************/
 .original,
 .modificado{    
-  width: 100%;
+  width: 100%;  
 }
 .splitview {
     position: relative;    
-    min-height: 45vw;
+    min-height: 56vw;    
     overflow: hidden;
 }
 /**************************************Esse Código Ajuntou as duas imagens****************************************************/
 .panel {
   position: absolute;
   width: 100vw;
-  min-height: 45vw;
+  min-height: 56vw;
   overflow: hidden;
 }
 /*******************************************Jogou os Textos para trás********************************************************/
 .panel .content {
   position: absolute;
   width: 100vw;
-  min-height: 45vw;
+  min-height: 56vw;
   color: #FFF;
 }
 /****************************Deixou a imagem sem margin e maior e fez aparecer o texto da direita****************************/
@@ -134,7 +133,7 @@ nav a{
 }
 .skewed .top {
   transform: skew(-30deg);
-  margin-left: -1000px;
+  margin-left: -1063px;
   width: calc(50vw + 1000px);
 }
 .skewed .top .content {
@@ -161,9 +160,7 @@ nav a{
 .titulo_ilus,
 .titulo_coder{
   font-size: 4rem;
-  margin: auto;
-  color: white;
-  font-family: Segoe Ui;
+  margin: auto;  
   }
   .titulo{
     width: 380px;
@@ -172,13 +169,14 @@ nav a{
     margin-bottom: 0;
   }
 .texto {
-  font-size: 21px;
+    font-size: 21px;
+    line-height: 32px;
+    padding-top: 20px;
 }
-.cristian {
-    width: 512px;
+.cristian {     
     position: absolute;
-    margin-top: -20px;
-    margin-left: 235px;
+    margin-top: 10px;
+    margin-left: 336px;
     z-index: 3;
 }
 .retangulo {
@@ -193,82 +191,71 @@ nav a{
     -webkit-transform: rotate(45deg);
 }
 .pincel {
-    width: 49.3vw;
-    height: 60.3vw;
-    margin-left: 121px;
+    background-image: url(../img/133-min.png);
+    width: 793px;
+    height: 1232px;
+    margin-left: 272px;
     margin-top: -402px;
-}
+  }
 /****************************************************Wolf**********************************************************************/
 #wolf {
+    background-image: url(../img/lobinho-min.png);
     float: right;
-    height: 1238px;
-    margin-top: -417px;
-    position: static;
-}
+    width: 496px;
+    height: 988px;
+    margin-top: -225px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 /****************************************************Fim**********************************************************************/
-#fig_cod{
-  float: left;
-}
-.fig_cod {    
-    height: 744px;    
-    position: static;
-    margin-left: -438px;
+#fig_cod {
+    background-image: url(../img/code-min.png);
+    float: left;
+    width: 1045px;
+    height: 1204px;
+    position: absolute;
+    margin-left: -618px;
 }
 /**********************************************Arvore de habilidade***********************************************************/
 .divisão_skil {    
     margin-top: 522px;
-    margin-left: -360px;
+    margin-left: -387px;
     position: absolute;    
 }
 .divisão_ferramenta_1 {    
     margin-top: 632px;
-    margin-left: -360px;
+    margin-left: -386px;
     position: absolute;    
 }
-.divisão_ferramenta_2 {    
-    margin-top: 800px;
-    margin-left: -360px;
+.divisão_ferramenta_2 {
+    display: flex;
+    justify-content: space-around;
+    width: 78%;   
+    margin-top: 809px;
     position: absolute;
-}
-.skil {
-    width: 200px;
-}
-#ps{
-  margin-left: 128px;
-}
-#ai{
-  margin-right: -6px;
-}
-#xd{
-  margin-right: 129px;
+    margin-left: -280px;
 }
 /****************************************************Fim**********************************************************************/
 /*************************************************Ilustração/coder************************************************************/
-.ilustracao,
-.coder{  
-  text-align: center;  
-}
 .ilustracao {
-    margin-top: 820px;
+    margin-top: 1035px;
     position: absolute;
+    margin-left: -50px;
 }
 .coder {
-    margin-top: 1480px;
+    margin-top: 1544px;
     position: absolute;
-    margin-left: 71px;
+    margin-left: 18px;
 }
-.titulo_ilus {
-    margin-top: 200px;
-}
-.port {
-    margin-top: 1080px;
+.port,
+.port_coder {
+    margin-top: 1127px;
     position: absolute;
-    margin-left: -140px;
+    margin-left: -190px;
 }
 .port_coder {
-    margin-top: 1525px;
-    position: absolute;
-    margin-left: -140px;
+    margin-top: 1594px;
 }
 /****************************************************Fim**********************************************************************/
 /****************************************************Background do form*******************************************************/
@@ -300,8 +287,7 @@ nav a{
     position: relative;
     margin-top: -745px;
     float: left;
-    margin-left: 29%;
-    border-radius: 8px 0px 0px 8px;
+    margin-left: 29%;    
 }
 .form_direito, 
 .form_esquerdo {
@@ -311,40 +297,31 @@ nav a{
 /****************************************************Form*********************************************************************/
 .can_help {
     font-size: 33px;
-    color: white;
-    font-family: Segoe Ui;
     text-align: center;
 }
 .jean {
   margin-top: -15px;
 }
 label{
-  color: white;
-  font-size: 35px;
-  font-family: Segoe Ui;
+  font-size: 35px
 }
 input {
     border-style: none;
     border-bottom: solid 1px;
     border-color: #707070;
-    color: white;
     background-color: #262626;
     width: 100%;
     height: 51px;
     font-size: 25px;
 }
-#place::-webkit-input-placeholder{    
-    color: white;
+.place::-webkit-input-placeholder{    
     background-color: #262626;
     text-transform: uppercase;
-    font-family: Segoe Ui;
     font-size: 26px;
 }
 textarea {
     background-color: #262626;
     border-radius: 8px;
-    color: white;
-    font-family: Segoe Ui;
     font-size: 20px;
     padding: 5px;
     width: 321px;
@@ -364,7 +341,6 @@ button{
 }
 .ok {
     color: #E10404;
-    font-family: Segoe Ui;
     font-size: 36px;    
     margin: 0;
 }
@@ -379,11 +355,11 @@ button{
   transition: 0.2s;
 }
 .ok:hover{
-  color: white;
   background: #E10404;
   box-shadow: 0 0 10px #E10404, 0 0 40px #E10404, 0 0 80px #E10404;
   border-radius: 8px;
   transition-delay: 1s;
+  color: #262626;   
 }
 .ok span{
   position: absolute;
@@ -459,8 +435,6 @@ footer {
 h6 {
     font-size: 15px;
     margin: 12px;
-    color: white;
-    font-family: Segoe Ui;
     text-align: center;
 }
 /****************************************************Animação scroll*********************************************************/
@@ -497,61 +471,69 @@ h6 {
 
 /**************************************************************Responsivo****************************************************/
 /****************************************************************viewport****************************************************/
-/*Revisão~ok*/
-@media only screen and (max-width:1440px){
+/*CHROME ok*/
+@media screen and (max-width:1440px){
   .form_direito {
-    margin-right: 21.3%;
+    margin-right: 22.3%;
   }
-  .form_esquerdo{
-    margin-left: 22%;
-  }
-  .pincel{
-    margin-left: 125px;
-  }
+  .form_esquerdo {
+    margin-left: 22.5%;
+  }  
   .skewed .top {   
-    margin-left: -1015px;
+    margin-left: -1059px;
+  }
+  .cristian{
+    margin-left: 236px;
+  }
+  .retangulo{
+    margin-left: 218px;
   }
   .pincel {
-    margin-left: 117px;
+    margin-left: 41px;
   }
   #wolf {
-    height: 1238px;
-    margin-top: 379px;   
+    height: 964px;
+    margin-top: -198px;
     margin-left: -675px;
   }
 
 }
-@media only screen and (max-width:1024px){
+@media screen and (max-width:1024px){
   .form_direito {
-    margin-right: 9.9%;
+    margin-right: 10.1%;
   }
   .form_esquerdo {
-    margin-left: 11%;
+    margin-left: 11.5%;
+  }
+  .pincel {
+    margin-left: 122px;
+    width: 503px;
+    height: 951px;
   }  
-  .retangulo{
+  .retangulo {
     width: 280px;
     height: 280px;
-    margin-left: 260px;
-  }   
+    margin-left: 227px;
+  }  
   .skewed .top {   
-    margin-left: -1015px;
+    margin-left: -1059px;
   }
   .cristian {
-    width: 412px;
+    width: 245px;
     margin-top: 21px;
-    margin-left: 194px;
+    margin-left: 246px;
   }
-  .divisão_ferramenta_1 {  
-    margin-left: -378px;
+  .divisão_skil {  
+    margin-left: -374px;    
   }
-  .divisão_ferramenta_2 {    
-    margin-left: -384px;
+  .divisão_ferramenta_1{
+    margin-left: -386px;
   }
-  .skewed .top {
-    margin-left: -1030px;
-  }
+  .divisão_ferramenta_2 {
+    margin-left: -270px;
+  }  
 }
-@media only screen and (max-width: 786px){
+@media screen and (max-width: 786px){
   .form_esquerdo,
   #wolf,
   .pincel,
@@ -560,22 +542,23 @@ h6 {
   }
   .skil {
     width: 155px;
+  }  
+  .cristian {
+    width: 197px;
+    margin-left: -182px;    
+    margin-top: 93px;
   }
-  .cristian{    
-    width: 351px;
-    margin-left: -256px;
-  }
-  .container{
-    width: 636px;
+  .container {
+    width: 675px;
   }
   .divisão_ferramenta_2 {
-    margin-left: -487px;
+    margin-left: -535px;
   }
   .titulo_ilus {
-    margin-left: -401px;
+    margin-left: -311px;
   }
   .titulo_coder {
-    margin-left: -536px;
+    margin-left: -304px;
   }
   .port,
   .port_coder {
@@ -593,7 +576,7 @@ h6 {
     margin-right: 7px;
   }
   .skewed .top {
-    margin-left: -1037px;
+    margin-left: -1059px;
   }
   nav ul{
     flex-direction: column;
@@ -620,9 +603,9 @@ h6 {
   li{
      background-color: rgba(0, 0, 0, 0.7);        
   }
-  .cristian{
-    z-index: 2;
-  }  
+  .fig_cod{
+    display: none;
+  }
   .black_clover:hover{
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 50%;
@@ -633,18 +616,36 @@ h6 {
     padding: 10px;    
   }
   nav li .active .icon_svg,
-    nav li:hover{
-      background-color: rgba(0, 0, 0, 0.9);    
-    }
+  nav li:hover{
+    background-color: rgba(0, 0, 0, 0.9);    
+  }
+  .ok:hover{  
+  transition-delay: -5s;  
+}
+.ok:hover span:nth-child(1){  
+  transition: -5s;
+}
+.ok:hover span:nth-child(3){  
+  transition: -5s;
+  transition-delay: -5s;
+}
+.ok:hover span:nth-child(2){  
+  transition: -5s;
+  transition-delay: -5s;
+}
+.ok:hover span:nth-child(4){  
+  transition: -5s;
+  transition-delay: -5s;
+  }
 }
 
-@media only screen and (max-width: 425px){
+@media screen and (max-width: 425px){
   header{
     height: 48px;
   }
-  .container{
+  .container {
     height: auto;
-    width: 300px;
+    width: 77vw;
     text-align: center;
   }
   .lobo{
@@ -667,71 +668,68 @@ h6 {
   .skewed .top{
     display: none;
   }  
-  .titulo {
-    width: 325px;
+  .titulo {    
     font-size: 2rem;
     margin-left: -26px;
   }
   .titulo_skil {
     font-size: 2rem;
-    margin-top: -260px;
-    margin-left: 117px;
+    margin-top: -232px;
+    margin-left: 101px;
   }
   .texto {
     font-size: 16px;
   }
   .divisão_ferramenta_1 {
-    margin-top: 338px;
-    margin-left: -312px;
-}
+    margin-top: 357px;
+    margin-left: -343px;
+  }
   .skil {
     width: 73px;
   }
   .divisão_ferramenta_2 {
-    margin-left: -387px;
-    margin-top: 414px;
+    margin-left: -402px;
+    margin-top: 441px;
   }
   .ilustracao {
-    margin-top: 309px; 
+    margin-top: 505px;
   }
   .titulo_ilus {
-    margin-left: -318px;
+    margin-left: -287px;
+    font-size: 2rem;
+    margin-top: 21px;
+  }
+  .coder {
+    margin-top: 803px;
+    position: absolute;
+  }
+  .titulo_coder {
+    margin-left: -364px;
     font-size: 2rem;
   }
   .port {
-    margin-top: 512px;
+    margin-top: 536px;
   }
   .swiper-slide {
     width: 200px;
     height: 200px;  
-  }
-  .coder {
-    margin-top: 811px;
-    margin-left: 51px;
-  }
+  } 
   .titulo_coder {
-    margin-left: -285px;
-    font-size: 2rem;
-    width: 80px;
+    margin-left: -434px;
+    font-size: 2rem;  
+    margin-top: 13px;
   }
   .port_coder {
     margin-top: 833px;
   }
   #geral {   
     height: 1143px;
-  }
-  #ps {
-    margin-left: 110px;
-    margin-right: 7px;
-    }
-  #xd {
-    margin-right: 0px;
-  }
+  }  
   .port, .port_coder {
-    margin-left: -361px;
-    }
+    margin-left: -367px;
+  }
     .form_direito {
-    margin-right: 12.9%;
+    margin-right: 9.9%;
     width: 283px;
     height: 515px;
   }
@@ -745,9 +743,108 @@ h6 {
   textarea{
     width: 274px;
     height: 175px;
+  }
+  .swiper-container {
+    width: 80vw;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }  
-  .animation_d,
-  .animation_e{
-    display: none;
+}
+@media screen and (max-width: 375px){  
+  .container {  
+    width: 290px; 
+  }
+  .titulo {
+    font-size: 2rem;    
+    width: 300px;
+    margin: 0;
+    padding: 0;
+  }
+  .texto { 
+    margin-left: -7px;
+  }
+  #titulo{
+    margin-left: -15px;
+  }
+  .titulo_skil {
+    font-size: 2rem;
+    margin-top: -205px;
+    margin-left: 138px;
+  }
+  .divisão_ferramenta_1 {
+    margin-top: 384px;
+    margin-left: -296px;
+  }
+  .skil {
+    width: 60px;
+  }
+  .divisão_ferramenta_2 {
+    margin-left: -357px;
+    margin-top: 448px;
+  }
+  #xd{
+    margin-left: 3px;
+  }
+  .titulo_ilus {
+    margin-left: -214px;
+  }
+  .port, .port_coder {
+    margin-left: -293px;
+  }
+  .titulo_coder {
+    margin-left: -360px;  
+    margin-top: 18px;
+  }
+  .form_direito {
+    margin-right: 24px;
+    width: 250px;
+    height: 510px;
+    margin-top: -613px;
+  }
+  .swiper-container {
+    width: 71vw;
+  }
+  textarea {
+    width: 244px;
+    height: 124px;
+  }
+  #back { 
+    height: 656px;
+  }  
+}
+@media screen and (max-width: 320px){
+  .titulo { 
+    width: 252px;
+  }
+  .titulo_skil {  
+    margin-top: -177px;
+    margin-left: 169px;
+  }
+  .divisão_ferramenta_1 {
+    margin-top: 392px;
+    margin-left: -248px;
+  }
+  .skil {
+    width: 50px;
+  }
+  .divisão_ferramenta_2 {
+    margin-left: -309px;
+  }  
+  .titulo_ilus {
+    margin-left: -147px;
+  }
+  .port, .port_coder {
+    margin-left: -253px;
+  }
+  .titulo_coder {
+    margin-left: -289px;
+  }
+  .form_direito {
+    margin-right: 7.9%;
+    width: 207px;
+  }
+  textarea {
+    width: 200px;
+    height: 137px;
   }
 }
