--- a/css/style.css
+++ b/css/style.css
@@ -424,8 +424,30 @@ button{
       background-size: cover;
       background: white;
       width: 300px;
-      height: 300px;
+      height: 380px;
     }
+.title{
+      color: black;
+    }
+.swiper-slide .imgbox{
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+}
+.swiper-slide .teste{
+  width: 100%;
+}
+.swiper-slide .detalhes{
+  box-sizing: border-box;
+  padding: 20px;
+  }
+.swiper-slide .detalhes .title{
+  font-size: 20px;
+  margin:0;
+  height: 0;
+  line-height: 20px;
+
+}
 /****************************************************footer********************************************************************/
 footer {    
     width: 100%;
@@ -468,10 +490,8 @@ h6 {
   height: 4px; 
   background-color: #E10404;
 }
-
 /**************************************************************Responsivo****************************************************/
 /****************************************************************viewport****************************************************/
-/*CHROME ok*/
 @media screen and (max-width:1440px){
   .form_direito {
     margin-right: 22.3%;
@@ -496,7 +516,6 @@ h6 {
     margin-top: -198px;
     margin-left: -675px;
   }
-
 }
 @media screen and (max-width:1024px){
   .form_direito {
@@ -848,3 +867,5 @@ h6 {
     height: 137px;
   }
 }
+
+
